--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,16 +1,3 @@
-
 {
-  "extends": ["stylelint-config-standard"],
-  "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
-  "rules": {
-    "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true,
-    "csstree/validator":
-    {
-      "properties": {
-        "width": "| fit-content"
-      }
-    }
-  },
-  "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
+  "extends": "stylelint-config-standard"
 }
